--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body{
     height: 600px;
     font-family:sans-serif ;
 }
+/*-------Menu-bar--------*/
 .menu-bar{
     background: rgb(0,100,0) ;
     text-align: center;
@@ -83,3 +84,6 @@ body{
     background: rgb(0,100,0);
     border-radius: 10px;
 }
+
+/*-------Menu-bar End--------*/
+
